# agenttext_package

./: .gitignore  README.md  deploy.sh  pyproject.toml  setup.py
agenttext/: __init__.py  exceptions.py
agenttext/rest/: __init__.py  agenttext.py  chats.py  messages.py  watcher.py
examples/: simple.py
