[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttext"
version = "1.0.0"
description = "Python SDK for the AgentText iMessage REST API"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
]

[tool.setuptools]
packages = ["agenttext", "agenttext.rest"]

